# causal_methods_demo

./: README.md  debug_psm.py  demo_information_criteria.py  pyproject.toml  pytest.ini  test_cuped_notebook.py
config/: README.md  scenario_high_treatment.yaml  scenario_low_adoption.yaml  simulation_config.yaml
data/: simulated_users.csv  tax_software_dml_demo.csv
docs/: README.md  causal_forest_guide.md  configuration_parameters.md  cuped_guide.md  did_guide.md  dml_guide.md  psm_guide.md  synthetic_control_guide.md
notebooks/: 00_generate_data.ipynb  01_did_tax.ipynb  02_psm_tax.ipynb  03_dml_tax.ipynb  04_cuped_tax.ipynb  05_synthetic_control_tax.ipynb  06_causal_forest_tax.ipynb  test_cuped.py
src/: __init__.py  data_simulation.py
src/causal_methods/: __init__.py  causal_forest.py  cuped.py  did.py  dml.py  psm.py  synthetic_control.py
tests/: __init__.py  conftest.py  test_causal_forest.py  test_cuped.py  test_data_simulation.py  test_did.py  test_dml.py  test_integration.py  test_psm.py  test_synthetic_control.py  test_utils.py
